// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifGrid /> Asegurarse de que existe el componente 1`] = `
<Fragment>
  <h2
    className="color_h2"
  >
    Perfect
  </h2>
  <div
    className="card-grip"
  >
    <GifItem
      id="ABC"
      key="ABC"
      title="user"
      url="hhtps/images/pngAndjpg.png"
    />
    <GifItem
      id="wxc"
      key="wxc"
      title="user"
      url="hhtps/images/pngAndjpg.png"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el componente <GifGrid /> Fotografiar el componente 1`] = `
<Fragment>
  <h2
    className="color_h2"
  >
    Perfect
  </h2>
  <p
    className="card animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grip"
  />
</Fragment>
`;
